# Lethe

./: .gitignore  Cargo.toml  LICENSE  README.md  blueprint  build.rs  cargo.toml  code.txt
.github/workflows/: release.yml
lethe_cli/: Cargo.toml
lethe_cli/src/: fs_fuse.rs  fs_webdav.rs  main.rs  main_old.rs
lethe_cli/src/cli/: mod.rs  mount.rs  ops.rs
lethe_cli/src/dav/: file.rs  fs.rs  mod.rs  state.rs
lethe_core/: Cargo.toml
lethe_core/src/: config.rs  crypto.rs  index.rs  lib.rs  storage.rs
lethe_daemon/: Cargo.toml
lethe_daemon/src/: filesystem.rs  main.rs
my_vault/: salt.loader
