[package]
name = "lethe_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
lethe_core = { path = "../lethe_core" }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
rpassword = "7.0"
walkdir = "2.4"
dirs = "5.0"
log = "0.4"
env_logger = "0.10"
fxhash = "0.2"

# --- WEBDAV STACK ---
# The logic for WebDAV
dav-server = { version = "0.5", features = ["warp-compat"] }
# The actual HTTP server
warp = "0.3"
# Async runtime
tokio = { version = "1", features = ["full"] }
# Data types
headers = "0.3"
bytes = "1"
futures-util = "0.3"
httparse = "1.8"