[package]
name = "lethe_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
# --- Internal Logic ---
lethe_core = { path = "../lethe_core" }

# --- CLI Utilities ---
clap = { version = "4.4", features = ["derive"] } # Command line argument parsing
anyhow = "1.0"      # Error handling
rpassword = "7.0"   # Secure password prompting (masks input)
walkdir = "2.4"     # Recursive directory walking (for 'lethe put')
dirs = "5.0"        # Finding home directories cross-platform
log = "0.4"         # Logging facade
env_logger = "0.10" # Logger implementation
fxhash = "0.2"      # Fast hashing for in-memory maps
humansize = "2.1"

# --- WebDAV Server Stack (The new "Driver") ---
# The core WebDAV logic that handles LS, MKDIR, PUT, GET
dav-server = { version = "0.5", features = ["warp-compat"] }

# The HTTP server that powers the WebDAV drive
warp = "0.3"

# Async runtime required for the server
tokio = { version = "1", features = ["full"] }

# HTTP/Network utilities
headers = "0.3"
bytes = "1"
futures-util = "0.3"
httparse = "1.8"