[package]
name = "lethe_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
# --- Shared Dependencies (All Platforms) ---
lethe_core = { path = "../lethe_core" }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
rpassword = "7.0"
walkdir = "2.4"
dirs = "5.0"
log = "0.4"
env_logger = "0.10"
fxhash = "0.2"
humansize = "2.1"
tokio = { version = "1", features = ["full"] }

# --- Windows Dependencies (WebDAV) ---
[target.'cfg(windows)'.dependencies]
dav-server = { version = "0.5", features = ["warp-compat"] }
warp = "0.3"
headers = "0.3"
bytes = "1"
futures-util = "0.3"
httparse = "1.8"
uuid = { version = "1.6", features = ["v4"] }
rand = "0.8"

# --- Unix Dependencies (FUSE) ---
[target.'cfg(unix)'.dependencies]
fuser = "0.12"
libc = "0.2"



[profile.release]
opt-level = 3       # Max optimization
lto = true          # Link Time Optimization (squeezes unused code)
codegen-units = 1   # Slower build, faster binary
strip = true        # Removes debug symbols (huge size reduction)
panic = "abort"     # Removes stack trace logic (smaller binary)