[package]
name = "lethe_core"
version = "0.1.0"
edition = "2024"

[dependencies]
# Serialization (CBOR support)
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"

# Crypto
chacha20poly1305 = "0.10" # The main cipher
argon2 = "0.5"            # Password hashing
rand = "0.8"              # Secure randomness
blake3 = "1.5"            # Fast hashing for checksums
zeroize = { version = "1.7", features = ["derive"] }           # Securely wiping memory

# Compression
zstd = "0.13"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
anyhow = "1.0"            # Easy error handling
thiserror = "1.0"         # Structured errors
