[package]
name = "lethe_daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
lethe_core = { path = "../lethe_core" }
anyhow = "1.0"
rdev = "0.5" # Global hotkey listener (Cross-platform)

[target.'cfg(target_os = "linux")'.dependencies]
fuser = "0.14" # Linux FUSE bindings
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winfsp = "0.10" # Windows FUSE bindings (requires WinFsp installed)
windows = { version = "0.52", features = ["Win32_System_Threading"] }
